--- a/meson.build
+++ b/meson.build
@@ -3,7 +3,7 @@ project('bitarray', 'cpp')
 add_project_arguments(
   '-mbmi2', '-mpopcnt',
   '-Werror', '-Wall', '-Wextra', '-Wpedantic',
-  '-fsanitize=implicit-conversion', '-fsanitize=integer',
+  '-fsanitize=implicit-conversion', '-fsanitize=integer', '-fsanitize=undefined',
   '-std=c++17',
   language: 'cpp',
 )
